Fixed press page spacing

--- a/css/press.css
+++ b/css/press.css
@@ -10,13 +10,11 @@
   height: 800px;
 }
 .press-content-container {
-  width: 1100px;
-  height: auto;
   min-height: 700px;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  place-items: center;
+  gap: 30px;
 }
 .press-card {
   position: relative;
@@ -52,10 +50,7 @@
   margin-top: 10px;
   font-size: 13px;
 }
-.press-card-link {
-    margin: 25px 0;
-    
-}
+
 .press-card-link:link,
 .press-card-link:visited {
   color: black;
@@ -66,6 +61,27 @@
   transform: translateY(-5px);
   transition: 1s;
 }
+@media screen and (max-width: 1100px) {
+  
+  .press-content-container {
+    width: 600px;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .press-card {
+    width: 600px;
+    height: 700px;
+  }
+  .press-card-img-container {
+    height: 600px;
+  }
+  .press-card-text-container h4 {
+    font-size: 22px
+  }
+  .press-card-text-container p {
+    font-size: 18px;
+  }
+}
+
 @media screen and (max-height: 850px) {
   .press-welcome {
     height: 700px;
@@ -75,42 +91,28 @@
   .press-welcome {
     height: 500px;
   }
+
 }
-@media screen and (max-width: 1100px) {
+
+@media screen and (max-width: 610px) {
   .press {
-    height: 2300px;
-  }
-  .press-content-container {
-    width: 600px;
-    height: 2200px;
-    flex-direction: column;
-  }
-  .press-card {
-    width: 100%;
-    height: 700px;
-  }
-  .press-card-img-container {
-    height: 600px;
-  }
-}
-@media screen and (max-width: 600px) {
-  .press {
-    height: 1700px;
+    padding: 100px 10px;
   }
   .press-welcome-text {
     top: 40px;
   }
   .press-content-container {
-    width: 300px;
-    height: 1500px;
+    width: 100%;
+    gap: 50px;
   }
   .press-card {
-    height: 475px;
+    width: 320px;
+    height: 600px;
   }
   .press-card-img-container {
-    height: 300px;
+    height: 320px;
   }
   .press-card-text-container {
-    height: 200px;
+    height: 310px;
   }
 }
